# rtl_ais

./: README.md
rtl-ais/: .directory  CMakeLists.txt  README  rtl-ais-dirk.kdev4
rtl-ais/include/: shared_vars.h
rtl-ais/src/: CMakeLists.txt  rtl_ais.c
rtl-ais/src/aisdecoder/: aisdecoder.c  aisdecoder.h  sounddecoder.c  sounddecoder.h
rtl-ais/src/aisdecoder/lib/: receiver.c  receiver.h
rtl-ais/src/convenience/: convenience.c
